feat: add home page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
   --black600: rgba(0, 0, 0, 0.6);
 
   --gray500: rgba(145, 158, 171, 1);
+  --gray300: rgba(243, 242, 242, 1);
   --blue800: rgba(0, 68, 144, 1);
   --red900: rgba(255, 49, 52, 1);
 }
