feat: add airport map page

--- a/src/app/chatbot/styles.css
+++ b/src/app/chatbot/styles.css
@@ -1,5 +1,5 @@
 .iframe-area {
   width: 100%;
-  height: calc(100vh - 92px - 90px);
+  height: calc(100vh - 92px - 40px - 88px);
   overflow: hidden;
 }
