--- a/src/components/NavigationHeader/styles.css
+++ b/src/components/NavigationHeader/styles.css
@@ -1,5 +1,8 @@
 .navigation-header-area {
   color: var(--white900);
+  width: 100%;
+  position: absolute;
+  z-index: 10;
 }
 
 .navigation-header-content {
