--- a/src/components/FlightsTable/styles.css
+++ b/src/components/FlightsTable/styles.css
@@ -30,7 +30,7 @@
   background: var(--blue800);
   color: var(--white900);
   font-size: 12px;
-  text-transform: lowercase;
+  text-transform: none;
 }
 
 .red {
