--- a/src/components/ServicesList/styles.css
+++ b/src/components/ServicesList/styles.css
@@ -1,6 +1,12 @@
+.toggle-button-area {
+  display: flex;
+  gap: 10px;
+  padding: 64px 10px 0;
+}
+
 .list-form-area {
   width: 100%;
-  padding: 40px 10px 10px;
+  padding: 10px;
 }
 
 .list-search-input {
