--- a/src/components/FlightsTable/styles.css
+++ b/src/components/FlightsTable/styles.css
@@ -1,6 +1,9 @@
+.container-area {
+  padding: 40px 10px 10px;
+}
+
 .table-form-area {
   width: 100%;
-  padding: 40px 10px 10px;
 }
 
 .table-search-input {
@@ -9,7 +12,6 @@
 }
 
 .table-area {
-  padding: 0 10px 10px;
   width: 100%;
   max-width: 100%;
   overflow-x: auto;
