--- a/src/components/NavigationHeader/styles.css
+++ b/src/components/NavigationHeader/styles.css
@@ -8,7 +8,8 @@
 .navigation-header-content {
   display: flex;
   align-items: center;
-  width: 100vw;
+  max-width: 1024px;
+  margin: 0 auto;
   min-width: 375px;
 }
 
