--- a/src/components/ServicesList/styles.css
+++ b/src/components/ServicesList/styles.css
@@ -1,7 +1,10 @@
+.container-area {
+  padding: 56px 10px 10px;
+}
+
 .toggle-button-area {
   display: flex;
   gap: 10px;
-  padding: 64px 10px 0;
 }
 
 .list-form-area {
